<resources>
    <string name="app_name">Personal Restaurant Guide</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Restaurant &amp; Rave</string>
    <string name="hello_splash">Welcome to</string>
    <string name="splash_splash">the Personal Restaurant Guide</string>
    <string name="view">View Restaurants</string>
    <string name="add">Add Restaurant</string>
    <string name="edit">Edit/Delete Restaurant</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="facebook_app_id">1511104972551715</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="aboutteam">About the Team</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_restuant_dbitems">RestuantDBItems</string>
    <string name="select">Select for details</string>
    <string name="title_activity_single">title_activity_single</string>
</resources>
